# claude-memory-system

./: .gitignore  CONTRIBUTING.md  FUTURE_WORK.md  README.md  TEST_PLAN.md  TEST_RESULTS.md  WEB_DASHBOARD_SUMMARY.md  pyproject.toml
claude_memory/: __init__.py  cli.py  context_tracker.py  index.py  manifest.py  memory.py  models.py  session.py  skills.py  utils.py
claude_memory/templates/: CLAUDE.md.global.template  CLAUDE.md.project.template
claude_memory/viz/: __init__.py  export.py  health.py  projects.py  search.py  session.py  stats.py  tags.py  timeline.py  utils.py
claude_memory/web/: README.md  app.py  data_loader.py
claude_memory/web/charts/: __init__.py  plotly_heatmap.py  plotly_network.py  plotly_timeline.py  plotly_trends.py
claude_memory/web/components/: __init__.py  filters.py  session_detail.py  stats_overview.py  tag_cloud.py
claude_memory/web/export/: __init__.py  exporters.py
claude_memory/web/utils/: formatters.py  transformers.py
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  FAQ.md  SCRIPTS.md  USAGE.md
scripts/: analyze-patterns.sh  cleanup-stale-sessions.sh  export-memory.sh  import-memory.sh  rebuild-index.sh  run-tests.sh  show-stats.sh  validate-index.sh
