[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-memory"
version = "0.1.0"
description = "Two-tier memory system for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jay", email = "jay@example.com"}
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-memory = "claude_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_memory*"]

[tool.setuptools.package-data]
claude_memory = ["templates/*.template"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
